--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,24 @@
 Package: localEnrichment
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Type: Package
+Title: Local Enrichment Analysis Tools for Omics Data
+Version: 0.1.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Alex", "Sanchez", email = "alex.sanchez@ub.edu", role = c("aut", "cre"))
+Description: Flexible tools for performing over-representation (ORA)
+    and quantitative enrichment (QSEA) analyses using local mappings.
+Depends: R (>= 4.2)
+Imports:
+    magrittr,
+    methods,
+    readr,
+    stats,
+    utils,
+    purrr,
+    dplyr,
+    tibble,
+    ggplot2,
+    forcats
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
