Added new3 coercion into Metaboliteset data frame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(as.data.frame,EnrichmentSet)
 export(EnrichmentSet)
 export(as.EnrichmentSet.list)
+export(as.MetaboliteSetDataFrame)
 export(buildEnrichmentSet)
 export(filterEnrichmentSet)
 export(filter_sets_by_features)
