Updated to avoid confusion between metabolite IDs and metabolite names in Sets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,19 +11,12 @@ export(ora_test)
 export(plot_enrichment)
 export(plot_qea_profile)
 export(prepare_features_list)
-export(qea_test)
 export(validateEnrichmentSet)
 export(validate_mapping)
 exportClasses(EnrichmentSet)
 exportMethods(show)
 exportMethods(summary)
-importFrom(dplyr,all_of)
-importFrom(dplyr,distinct)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,mutate)
-importFrom(dplyr,select)
-importFrom(dplyr,summarise)
+import(ggplot2)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,new)
@@ -34,5 +27,4 @@ importFrom(stats,median)
 importFrom(stats,p.adjust)
 importFrom(stats,phyper)
 importFrom(stats,setNames)
-importFrom(tibble,tibble)
 importFrom(utils,globalVariables)
