Solved two minor bugs and the loss of qsea_test due to missing roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ora_test)
 export(plot_enrichment)
 export(plot_qea_profile)
 export(prepare_features_list)
+export(qea_test)
 export(validateEnrichmentSet)
 export(validate_mapping)
 exportClasses(EnrichmentSet)
